[project]
name = "dados-sisor-2026"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel Dornas",email = "gabrielbdornas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dpckan (>=0.1.23,<0.2.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
